@@ -165,7 +165,7 @@ We use the following conventions for denoting text:
 To edit or create a geometry file,
 the user starts mged from the shell by giving the command:
 <pre>
-   <tt>%</tt> <B><FONT color="#20a020">mged -n cup.g</FONT></B>
+   <tt>%</tt> <B><FONT color="#20a020">mged -c cup.g</FONT></B>
 </pre>
 The filename is required.&nbsp Unlike many programs which allow the user to create
 a new document or database in memory, mged always keeps everything on disk.&nbsp
@@ -180,7 +180,7 @@ allows the user to verify that the proper version is being started.&nbsp
 If the file specified does not exist when mged is started,
 it will stop and ask if the user wishes to create a new database:
 <pre>
-   <tt>%</tt> <B><FONT color="#20a020">mged -n cup.g</FONT></B><tt>
+   <tt>%</tt> <B><FONT color="#20a020">mged -c cup.g</FONT></B><tt>
    BRL-CAD Release 4.5   Graphics Editor (MGED)
        Mon May 19 16:31:32 EDT 1997, Compilation 5377
        bparker@vapor.arl.mil:/m/cad/.mged.6d
@@ -194,7 +194,7 @@ database.&nbsp Any other (non-y) keys (followed by a return)
 will cause mged to quit without creating the database.&nbsp
 
 <pre>
-   <tt>%</tt> <B><FONT color="#20a020">mged -n cup.g</FONT></B><tt>
+   <tt>%</tt> <B><FONT color="#20a020">mged -c cup.g</FONT></B><tt>
    BRL-CAD Release 4.5   Graphics Editor (MGED)
        Mon May 19 16:31:32 EDT 1997, Compilation 5377
        bparker@vapor.arl.mil:/m/cad/.mged.6d
@@ -219,7 +219,7 @@ The common choices are:
 </table></center>
 Enter one of the names listed followed by a return.&nbsp
 <pre>
-   <tt>%</tt> <B><FONT color="#20a020">mged -n cup.g</FONT></B><tt>
+   <tt>%</tt> <B><FONT color="#20a020">mged -c cup.g</FONT></B><tt>
    BRL-CAD Release 4.5   Graphics Editor (MGED)
        Mon May 19 16:31:32 EDT 1997, Compilation 5377
        bparker@vapor.arl.mil:/m/cad/.mged.6d
